# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.597 2006/04/17 21:31:56 wolf31o2 Exp $

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Fixed genkernel initramfs overlay support. Thanks to Alvin Lee
  <liyiming@ict.ac.cn> in bug #129890.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Moved sed line for ##STARTX to end of file, since we aren't touching
  /etc/startx until the end.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added a check for the games group and add it if it doesn't exist already.
  This should resolve bug #125498.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot2_template.spec,
  examples/netboot_template.spec, examples/snapshot_template.spec,
  examples/stage4_template.spec, examples/tinderbox_template.spec:
  Removed portdir_overlay from the snapshot example spec and added
  portage_overlay to the example specs for the relevant targets.

  04 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc41 since it has better LiveCD support.

  04 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fix theme for gdm.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Removed check for livecd/dev-manager being udev since it was done
  incorrectly and genkernel assumes udev by default on a 2.6 kernel and devfs
  by default on a 2.4 kernel. Thanks to Alvin Lee <liyiming@ict.ac.cn> on bug
  #128265 for pointing this out.

  23 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/elilo-3.4-cdtar.tar.bz2,
  +livecd/cdtar/elilo-3.6-cdtar.tar.bz2: