@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.597 2006/04/17 21:31:56 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.598 2006/04/17 21:41:43 wolf31o2 Exp $
+
+  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/build.py:
+  Added patch to build.py for portage 2.1 support.
 
   17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/kmerge.sh:
